<resources>
    <string name="app_name">cs4048-group_007</string>
    <string name="team_member_oliver">Oliver Fitzgerald</string>
    <string name="team_member_ben">Benjamin Burt</string>
    <string name="team_member_Jing">Jing Peng</string>
    <string name="team_member_conor">Conor Gray</string>
    <string name="rollercoaster_popup_title">Loop Rollercoaster</string>
    <string name="rollercoaster_popup_description">Filler Text Roller Coaster Fun</string>
    <string name="wait_popup_component_title">Wait time</string>
    <string name="description_popup_component_title"></string>
    <string name="previous">previous</string>
    <string name="lorem_ipsum">lorem_ipsum</string>
    <string name="order">Order</string>
    <string name="back">Back</string>
    <string name="add_to_order">Add to Order</string>
    <string name="menu_title">Menu</string>
    <string name="Loading">Loading ...</string>
    <string name="cancel">Cancel</string>
    <string name="profile_heading">Profile</string>
    <string name="steps_heading">Steps Around the Park</string>
    <string name="my_orders">My Orders</string>
    <string name="confirm">Confirm</string>
</resources>