<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Profile">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_heading"
        android:textSize="40sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:id="@+id/steps_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/back">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/steps_heading"
            android:textSize="30sp"/>

        <ImageView
            android:id="@+id/step_counter_gif"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/step_counter_gif"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="1250 Steps"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/profile_return_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/back"
        android:layout_marginTop="300dp"/>

</LinearLayout>